# GithubActionTest

./: .gitignore  GithubActionTest.sln
.github/workflows/: build_installer.yml  build_installer_pack.yml  dotnet-framework.yml  pack.yml  发布.yml
GithubActionTest/: App.xaml  App.xaml.cs  GithubActionTest.csproj  MainWindow.xaml  MainWindow.xaml.cs
GithubActionTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Setup/: .gitignore  pack.bat
Setup/3rd/duilib/: CMakeLists.txt
Setup/3rd/duilib/Control/: UIMenu.cpp  UIRichEdit.cpp
Setup/3rd/duilib/Core/: UIDlgBuilder.cpp  UIManager.cpp  UIManager.h  UIRender.cpp
Setup/common/: CMakeLists.txt  cmdline.h  helper.cpp  helper.h  window.cpp  window.h
Setup/installer/: .gitignore  CMakeLists.txt
Setup/installer/cmake/: check_resources.cmake  generated_files.cmake  package_resources.cmake
Setup/installer/inc/: DotNetInstallServer.h  InstallHandler.h  InstallWindow.h  IprogressObserver.h  IprogressObserver_a.h  MmIoChainer.h  config.h.in  icoextra.h
Setup/installer/res/: installer.xml
Setup/installer/src/: DotNetInstallServer.cpp  InstallHandler.cpp  InstallWindow.cpp  icoextra.cpp  install.rc.in  main.cpp  offline_runtime.rc.in  online_runtime.rc.in
Setup/resources/: ui_sprite.psd
Setup/uninstaller/: CMakeLists.txt
Setup/uninstaller/inc/: FileCollector.h  FileDeleter.h  RegistryHelper.h  UnInstallWindow.h
Setup/uninstaller/res/: uninstaller.xml
Setup/uninstaller/src/: FileCollector.cpp  FileDeleter.cpp  RegistryHelper.cpp  UnInstallWindow.cpp  main.cpp  uninstall.rc
